# triadlang

./: LICENSE  README.md  pyproject.toml  triad  triadc
python/: README.md  __init__.py  build_dist.sh  entry.py  triad  triadc
python/benchmarks/: bench_array_ops.py  bench_array_ops.tri  bench_comparison.py  bench_coupled.py  bench_coupled.tri  bench_equation_nontrivial.py  bench_equation_runtime.py  bench_gpu.py  bench_gpu_vs_python.py  bench_math_heavy.py  bench_math_heavy.tri  bench_object.py  bench_object.tri  bench_pde_solve.py  bench_pde_solve.tri  bench_recursion_deep.py  bench_recursion_deep.tri  bench_speed.py  run_benchmarks.py
python/cli/: lsp.py  main.py  repl.py
python/compiler/: c_codegen.py  docgen.py  emit_json.py  formatter.py  ir.py  lower.py  source_optimizer.py  triadc.py  typecheck.py  typecheck_universal.py
python/crossdomain/: _solo_climate.tri  _solo_neuron.tri  run_crossdomain.py  s1_neuro_climate.tri  s2_origin_of_life.tri  s3_finance_materials.tri  s4_cosmos.tri  s5_grand_tournament.tri  s6_ac.tri  s6_b0.tri  s6_het.tri
python/examples/: native_demo.tri  native_integration.tri  solver_ablation.tri  solver_bench.tri  solver_convergence.tri  solver_exact_cmp.tri  solver_linear_cmp.tri  solver_linear_conv.tri  solver_native.tri  solver_speed.tri  stress_all.tri  stress_python.py
python/frontend/: ast_nodes.py  lexer.py  lexer_universal.py  parser.py  parser_universal.py
python/runtime/: backend.py  causal.py  codec.py  codec_3d.py  compiler.py  compiler_runtime.py  consciousness.py  data.py  debugger.py  equation_runtime.py  fast_solver.py  interpreter.py  losses.py  memory_manager.py  metrics.py  ml_device.py  multi_runtime.py  nn.py  observables.py  observables_atoms.py  projections.py  qubits.py  sat_solver.py  serialization.py  solver.py  tensor.py  trainer.py  viz.py  vm.py  vm_runtime.py
python/scripts/: ast_to_json.py  ast_to_json_legacy.py  atoms_to_text.py  check_to_text.py  codec_to_text.py  compiler_to_text.py  docgen_to_text.py  format_to_text.py  ir_to_json.py  lsp_to_text.py  multi_runtime_2d_modes_to_text.py  multi_runtime_2d_to_text.py  multi_runtime_3d_modes_to_text.py  multi_runtime_3d_to_text.py  multi_runtime_to_text.py  solver_1d_to_text.py  typecheck_legacy_to_text.py
python/stdlib/: plot.py  regimes.py  registry.py  templates.py  templates_3d.py  triad_module.py
python/tests/: smoke_all.py  test_ast.py  (+23 more)
tooling/: lsp_server.py
(+28 files in other folders)
